--- a/app/assets/components/subpages/oj-submit-page.html
+++ b/app/assets/components/subpages/oj-submit-page.html
@@ -57,7 +57,7 @@
 
         </paper-material>
 
-        <paper-url-resolver text="{{paperIdentifier}}" paperid="{{paperId}}" paperfullid="{{paperFullId}}" papertypedid="{{paperTypedId}}" paperversion="{{paperVersion}}" paperurl="{{paperURL}}" resolved="{{paperValid}}">
+        <paper-url-resolver text="{{paperIdentifier}}" paper-id="{{paperId}}" paper-full-id="{{paperFullId}}" paper-typed-id="{{paperTypedId}}" paper-version="{{paperVersion}}" paper-url="{{paperURL}}" resolved="{{paperValid}}">
         </paper-url-resolver>
 
     </section>
