--- a/app/assets/components/third-party-components.html
+++ b/app/assets/components/third-party-components.html
@@ -3,6 +3,6 @@
  * can be referenced here using a relative path.
  *
 
- *= require app-router/app-router
+ *= require app-router/src/app-router
 
 -->
