--- a/app/assets/components/ui-elements/oj-assigned-users-list.html
+++ b/app/assets/components/ui-elements/oj-assigned-users-list.html
@@ -89,7 +89,8 @@
         } else {
           return {};
         }
-      }
+      },
+      behaviors: [ Oj.paperHelpers ]
     });
   </script>
 </dom-module>
