--- a/app/assets/components/ui-elements/oj-paper-row.html
+++ b/app/assets/components/ui-elements/oj-paper-row.html
@@ -46,38 +46,48 @@
     }
 
   </style>
+
   <template>
-  <div class$="{{_computeClass(paper)}}">
-      <div class="inner layout horizontal">
-          <div class="lhs layout flex">
-              <div class="title">{{paper.title}}</div>
-              <div class="detail">
-                  Submitted by <span class="highlight">{{paper.submittor.name}}</span>
-                  on <span class="highlight">{{date ( paper.submitted_at)}}</span>
-                  <template is="dom-if" if="{{_computeIf(paper)}}">
-                  | Comments: <span class="highlight">{{paper.pending_issues_count}}</span>
-                  </template>
+
+      <div class$="{{_computeClass(paper)}}" on-tap="onTap">
+          <div class="inner layout horizontal">
+              <div class="lhs layout flex">
+                  <div class="title">{{paper.title}}</div>
+                  <div class="detail">
+                      Submitted by <span class="highlight">{{paper.submittor.name}}</span>
+                      on <span class="highlight">{{date ( paper.submitted_at)}}</span>
+                      <template is="dom-if" if="{{_computeIf(paper)}}">
+                      | Comments: <span class="highlight">{{paper.pending_issues_count}}</span>
+                      </template>
+                  </div>
+              </div>
+              <div class$="{{_computeClass2(paper)}}">
+                  <div class="status">Status: <span class="highlight">{{capitalize(paper.state)}}</span></div>
               </div>
           </div>
-          <div class$="{{_computeClass2(paper)}}">
-              <div class="status">Status: <span class="highlight">{{capitalize(paper.state)}}</span></div>
-          </div>
       </div>
-  </div>
-</template>
+
+  </template>
+
   <script>
     Polymer({
       is: 'oj-paper-row',
-      properties: { paper: { notify: true } },
-        _computeIf: function (paper) {
-            return paper.state == 'under_review';
-        },
+      properties: {
+          paper: { notify: true }
+      },
+      _computeIf: function (paper) {
+        return paper.state == 'under_review';
+      },
       _computeClass: function (paper) {
         return 'row ' + this.actionForPaper(paper) + ' layout flex';
       },
       _computeClass2: function (paper) {
         return 'rhs action-' + this.actionForPaper(paper) + ' layout self-end';
-      }
+      },
+      onTap: function(event, detail) {
+        this.fire('review', this.paper);
+      },
+      behaviors: [ Oj.globalExpressions, Oj.paperHelpers ]
     });
   </script>
 </dom-module>
