--- a/app/assets/components/ui-elements/oj-review-page-header.html
+++ b/app/assets/components/ui-elements/oj-review-page-header.html
@@ -161,7 +161,7 @@
 
               <div class="title flex">
                   <span>{{paper.title}}</span>
-                  <template is="dom-if" if="{{_computeIf(paper, show_bottom)}}">
+                  <template is="dom-if" if="{{_computeIf(paper)}}">
                       <span class="inline-status">&nbsp;(<span>{{capitalize(paper.state)}}</span>)</span>
                   </template>
               </div>
@@ -184,7 +184,7 @@
               <oj-assigned-users-list paper="{{paper}}"></oj-assigned-users-list>
           </div>
 
-          <template is="dom-if" if="{{show_bottom}}">
+          <template is="dom-if" if="{{_computeShowBottom(paper)}}">
               <div id="status-row" class="layout horizontal">
 
                   <div class="status-block">
@@ -192,7 +192,7 @@
                       <div class="status">{{capitalize(paper.state)}}</div>
                   </div>
 
-                  <template is="dom-if" if="{{_computeIf2(ppaper)}}">
+                  <template is="dom-if" if="{{_computeIf2(paper)}}">
                       <div class="count-block">
                           <div class="count">{{countOpen}}</div>
                           <div class="label">Open<br>Issues</div>
@@ -219,22 +219,23 @@
           </div>
       </template>
 
-      <template is="dom-if" if="{{loadProgress" <="" 100}}="">
+      <template is="dom-if" if="computeIf3(loadProgress)">
           <paper-progress class="progress" value="{{loadProgress}}"></paper-progress>
       </template>
 
   </template>
+
   <script>
     Polymer({
       is: 'oj-review-page-header',
       properties: {
         annotations: {
-          notify: true,
+          type:     Array,
+          notify:   true,
           observer: 'annotationsChanged'
         },
         loadProgress: { notify: true },
         paper: { notify: true },
-        show_bottom: { computed: '_computeShow_bottom(paper)' },
         user: { notify: true }
       },
       annotationsChanged: function () {
@@ -259,15 +260,19 @@
       addPaperAnnotation: function (event, detail) {
         this.fire('add-paper-annotation');
       },
-      _computeIf: function (paper, show_bottom) {
-        return !show_bottom && paper.state != 'accepted';
+      _computeShowBottom: function (paper) {
+        return paper && paper.can_view_annotations && paper.state != 'accepted';
       },
-      _computeIf2: function (ppaper) {
-        return ppaper.state != 'submitted';
+      _computeIf: function (paper) {
+        return paper && !this._computeShowBottom(paper) && paper.state != 'accepted';
       },
-      _computeShow_bottom: function (paper) {
-        return paper.can_view_annotations && paper.state != 'accepted';
-      }
+      _computeIf2: function (paper) {
+        return paper.state != 'submitted';
+      },
+      _computeIf3: function(loadProgress) {
+        return loadProgress <= 100;
+      },
+      behaviors: [ Oj.globalExpressions, Oj.paperHelpers ]
     });
   </script>
 </dom-module>
