--- a/app/views/papers/overview.html.erb
+++ b/app/views/papers/overview.html.erb
@@ -7,6 +7,9 @@
     <h4>Title: <%= p.title %> (<%= p.id %>)</h4>
     <ul>
       <li>PDF: <%= p.document_location %></li>
+      <li><a href="http://astro.theoj.org/review/<%= p.provider_type %>:<%= p.provider_id %>">View paper &rarr;</a></li>
+      <li>Editors: <%= p.editors.collect(&:name).join(',') %></li>
+      <li>Reviewers: <%= p.reviewers.collect(&:name).join(',') %></li>
       <li>Authors: <%= p.authors %></li>
       <li>Submitting author: <%= p.submittor.name %> &middot; <%= p.submittor.email %> &middot; <%= link_to "ORCID", "http://orcid.org/#{p.submittor.uid}" %></li>
       <li>Submitted at: <%= p.created_at %></li>
@@ -23,6 +26,9 @@
   <h4>Title: <%= p.title %> (<%= p.id %>)</h4>
   <ul>
     <li>PDF: <%= p.document_location %></li>
+    <li><a href="http://astro.theoj.org/review/<%= p.provider_type %>:<%= p.provider_id %>">View paper &rarr;</a></li>
+    <li>Editors: <%= p.editors.collect(&:name).join(',') %></li>
+    <li>Reviewers: <%= p.reviewers.collect(&:name).join(',') %></li>
     <li>Authors: <%= p.authors %></li>
     <li>Submitting author: <%= p.submittor.name %> &middot; <%= p.submittor.email %> &middot; <%= link_to "ORCID", "http://orcid.org/#{p.submittor.uid}" %></li>
     <li>Submitted at: <%= p.created_at %></li>
